# craftmine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
dep/: CMakeLists.txt
dep/glad/: CMakeLists.txt
dep/stb/: CMakeLists.txt  stb_image.c  stb_image.h
res/materials/: craftmine.txt
res/shaders/: cloud.fsh  cloud.vsh  composite.frag  composite.vert  cube_line.frag  cube_line.vert  screen_fxaa.fsh  screen_fxaa.vsh  simple.fsh  simple.vsh  sky.frag  sky.vert  special.fsh  special.vsh  sun.frag  sun.vert  ui.fsh  ui.vsh
res/world/: test.cmw
src/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
src/block/: block.cpp  block.hpp  material.cpp  material.hpp
src/block/container/: compressed_pair.hpp  dense_map.hpp
src/math/: mathpls.h  noise.hpp  pnoise.h  ray.hpp
src/render/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  oit.cpp  oit.hpp  render_type.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  ui.cpp  ui.hpp  window.cpp  window.hpp
src/utils/: ThreadPool.h  check_gl.h  event.h  tick.hpp
src/world/: chunk.cpp  chunk.hpp  generator.cpp  generator.hpp  world.cpp  world.hpp
